package com.fighter.model.calcul;

public class ConstantCalcul {

public static final double vitesseVehicule = 20;//m/s
public static final double coeffKm2Coord = 8.98208085003168E-6;
public static final int deltaT = 1;//Seconde



	public static double getVitessevehicule() {
		return vitesseVehicule;
	}
	public static double getCoeffkm2coord() {
		return coeffKm2Coord;
	}
	public static int getDeltat() {
		return deltaT;
	}
		

}
